bpy.ops.object.proxy_make() object parameter broken #30326

Closed
opened 2012-02-23 20:19:20 +01:00 by Jason van Gumster · 3 comments

%%%Rather than making a proxy of the object specified by the object parameter, this operator just uses the first object in the group list

Steps to reproduce (using the attached .blend file):

  1. Link in the "Group" group from the attached file and create an instance of that group
  2. From the Python console type "bpy.ops.object.proxy_make()"... this should make a proxy of the Cube (the first object in the group's list)
  3. Select and delete the proxy cube
  4. From the Python console type "bpy.ops.object.proxy_make(object = 'Lamp')"... this will also make a proxy of the Cube when it should make a proxy of the Lamp instead%%%
%%%Rather than making a proxy of the object specified by the object parameter, this operator just uses the first object in the group list Steps to reproduce (using the attached .blend file): 1. Link in the "Group" group from the attached file and create an instance of that group 2. From the Python console type "bpy.ops.object.proxy_make()"... this should make a proxy of the Cube (the first object in the group's list) 3. Select and delete the proxy cube 4. From the Python console type "bpy.ops.object.proxy_make(object = 'Lamp')"... this will also make a proxy of the Cube when it should make a proxy of the Lamp instead%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#30326
No description provided.