Fix #30326: calling e.g. bpy.ops.object.proxy_make(object = 'Lamp') would not pick the right object. This operator had two properties "object" and "type", but the latter was used while the former had the right description. Now changed it to have only an "object" property, so that the above code works.